# Expense-tracker

./: .dockerignore  .env.example  .env.txt  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  expense-tracker-compliance.patch  gitdiff.txt  mypy_output.txt  pyproject.toml  requirements.txt  ruff_output.txt  sample_data.py
.specify/: setup.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
data/: expense_tracker.db
database/: __init__.py  db.py  models.py  repository.py
pages/: __init__.py  ai_assistant.py  dashboard.py  expenses.py  reports.py  settings.py
services/: __init__.py  ai_service.py  analytics_service.py  gemini_service.py  ollama_service.py  openai_service.py  openrouter_service.py
specs/: README.md
specs/feature-expense-categorization/: plan.md  spec.md  tasks.md
tests/: test_ai_service.py  test_database.py
utils/: __init__.py  charts.py  helpers.py  receipt_parser.py
