[project]
name = "expense-tracker"
version = "1.0.0"
description = "AI-powered expense tracker built with Streamlit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Md Abdullah" }]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["\\.venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.pylint.main]
ignore = [".venv"]
disable = ["missing-module-docstring", "missing-function-docstring"]

[tool.vulture]
paths = ["."]
exclude = [".venv", "tests"]
min_confidence = 80
